# cosyvoice2-ko-sft-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements_mcp.txt
.github/workflows/: ci.yml  lint.yml
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/dataset/: processor.py
cosyvoice/llm/: llm.py
cosyvoice/utils/: executor.py  train_utils.py
deploy/gcp-vm-collector/: README.md  app.py  cosyvoice-usage.service  deploy.sh  nginx-location.conf
deploy/usage-collector/: README.md  schema.sql  worker.js  wrangler.toml.example
examples/ko_sft/: run_ko_sft.sh
examples/ko_sft/conf/: cosyvoice2_ko_sft.yaml
scripts/: convert_checkpoint.py  gcp_usage_stats.ps1  install.ps1  install.sh  smoke_inference.py  validate_release.py
src/cosyvoice_ko_mcp/: __init__.py  config.py  model_manager.py  prepare.py  server.py  synthesis.py  usage_reporting.py  voice_store.py
tests/: test_mcp_stdio.py  test_model_manager.py  test_usage_reporting.py  test_voice_store.py
tools/: extract_speech_token.py
